Blog layout issue.

--- a/flaviabernardes/static/css/blog.css
+++ b/flaviabernardes/static/css/blog.css
@@ -48,10 +48,6 @@ h1.editing {
 
 /*
 
-#blog {
-    overflow: hidden;
-}
-
 #posts {
     margin-top: 20px !important;
 }
